Added facial recognition
