# backend/src/modules/auth/auth.routes.js
@@ -5,5 +5,6 @@ const authMiddleware = require('../../shared/middleware/auth');
 router.post('/login', authController.loginHandler);
 router.post('/forgot-password', authController.forgotPasswordHandler);
 router.post('/change-password', authMiddleware, authController.changePasswordHandler);
+router.post('/register-face', authMiddleware, authController.registerFaceHandler);
 
 module.exports = router;
